--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,26 @@
 #app {
   display: flex;
+  align-items: flex-start;
   max-width: 1200px;
   margin: 0 auto;
   padding: 60px 30px;
+}
+
+#app main {
+  margin-left: 30px;
+}
+
+@media (max-width: 1000px) {
+  #app {
+    flex-direction: column;
+  }
+
+  #app main {
+    margin-top: 30px;
+    margin-left: 0;
+  }
+
+  #app aside {
+    width: 100%;
+  }
 }
